# beak-fuzz

./: .gitignore  Cargo.toml  Makefile  README.md  rustfmt.toml
beak-py/: .gitignore  Makefile  README.md  pyproject.toml
beak-py/docs/: ARCHITECTURE.md
beak-py/libs/zkvm-fuzzer-utils/: README.md
beak-py/libs/zkvm-fuzzer-utils/zkvm_fuzzer_utils/: git.py
beak-py/projects/jolt-fuzzer/: README.md  pyproject.toml
beak-py/projects/jolt-fuzzer/jolt_fuzzer/: __init__.py  cli.py  settings.py  utils_install.py
beak-py/projects/nexus-fuzzer/: README.md  pyproject.toml
beak-py/projects/nexus-fuzzer/nexus_fuzzer/: __init__.py  cli.py  settings.py  utils_install.py
beak-py/projects/openvm-fuzzer/: Dockerfile  README.md  pyproject.toml
beak-py/projects/openvm-fuzzer/openvm_fuzzer/: cli.py  settings.py
beak-py/projects/openvm-fuzzer/openvm_fuzzer/fuzzer_utils_crate/: lib.rs
beak-py/projects/openvm-fuzzer/openvm_fuzzer/passes/: __init__.py  pass1_infrastructure.py  pass2_bypass_checks.py  pass3_collection.py
beak-py/projects/openvm-fuzzer/openvm_fuzzer/patches/fuzzer_utils_crate/: Cargo.toml  lib.rs
beak-py/projects/pico-fuzzer/: README.md  pyproject.toml  requirements.txt
beak-py/projects/pico-fuzzer/pico_fuzzer/: __init__.py  cli.py  inject_patch.py  settings.py  utils_install.py
beak-py/projects/pico-fuzzer/pico_fuzzer/passes/: __init__.py  pass1_infrastructure.py  pass2_bypass_checks.py  pass3_collection.py
beak-py/projects/risc0-fuzzer/: README.md  pyproject.toml
beak-py/projects/risc0-fuzzer/risc0_fuzzer/: __init__.py  cli.py  settings.py  utils_install.py
beak-py/projects/risc0-fuzzer/risc0_fuzzer/assets/risc0/circuit/rv32im/src/prove/: beak.rs  beak_legacy.rs
beak-py/projects/sp1-fuzzer/: README.md  pyproject.toml
beak-py/projects/sp1-fuzzer/sp1_fuzzer/: cli.py  settings.py  utils_install.py
beak-py/projects/sp1-fuzzer/sp1_fuzzer/fuzzer_utils_crate/: Cargo.toml  lib.rs
beak-py/projects/sp1-fuzzer/sp1_fuzzer/passes/: pass1_infrastructure.py  pass2_bypass_checks.py  pass3_collection.py  pass4_v4_is_memory.py
beak-py/rl/: __init__.py  config.py  experiment.py  replay_buffer.py  requirements.txt  server.py  visualize.py
beak-py/rl/agents/: __init__.py  injection_agent.py  mutator_agent.py  scheduler_agent.py
crates/beak-core/: Cargo.toml
crates/beak-core/src/: lib.rs
crates/beak-core/src/fuzz/: bandit.rs  benchmark.rs  external_policy.rs  jsonl.rs  linucb.rs  loop1.rs  loop2.rs  mod.rs  mutators.rs  policy.rs  rl_scheduler.rs  seed.rs
crates/beak-core/src/rv32im/: instruction.rs  mod.rs  oracle.rs
crates/beak-core/src/trace/: bucket.rs  buckets.rs  micro_ops.rs  mod.rs  observations.rs  semantic.rs  semantic_matchers.rs  trace.rs
crates/beak-core/src/trace/micro_ops/: chip_row.rs  insn.rs  interaction.rs  mod.rs  trace.rs
docs/: ARCHITECTURE.md  BUG_REPORTS.md
output/rl_checkpoints/: injection_1000.pt  injection_10000.pt  injection_2000.pt  injection_3000.pt  injection_4000.pt  injection_5000.pt  injection_6000.pt  injection_7000.pt  injection_8000.pt  injection_9000.pt  mutator_1000.pt  mutator_10000.pt  mutator_2000.pt  mutator_3000.pt  mutator_4000.pt  mutator_5000.pt  mutator_6000.pt  mutator_7000.pt  mutator_8000.pt  mutator_9000.pt  scheduler_1000.pt  scheduler_10000.pt  scheduler_2000.pt  scheduler_3000.pt  scheduler_4000.pt  scheduler_5000.pt  scheduler_6000.pt  scheduler_7000.pt  scheduler_8000.pt  scheduler_9000.pt
output/rl_logs/: rl_server_metrics.jsonl
presentation/: slides.md
projects/jolt-e9caa23565dbb13019afe61a2c95f51d1999e286/: Cargo.toml  README.md
projects/jolt-e9caa23565dbb13019afe61a2c95f51d1999e286/src/lib/: backend.rs  mod.rs  trace.rs
projects/nexus-636ccb360d0f4ae657ae4bb64e1e275ccec8826/: Cargo.toml  README.md
projects/nexus-636ccb360d0f4ae657ae4bb64e1e275ccec8826/src/lib/: backend.rs  mod.rs  trace.rs
projects/openvm/: Cargo.toml
projects/openvm-336f1a475e5aa3513c4c5a266399f4128c119bba/: Cargo.toml  README.md
projects/openvm-336f1a475e5aa3513c4c5a266399f4128c119bba/src/lib/: backend.rs  bucket.rs  bucket_id.rs  mod.rs  trace.rs
projects/openvm-d7eab708f43487b2e7c00524ffd611f835e8e6b5/: Cargo.toml  README.md  rust-toolchain.toml
projects/openvm-f038f61d21db3aecd3029e1a23ba1ba0bb314800/: Cargo.toml  README.md
projects/openvm-f038f61d21db3aecd3029e1a23ba1ba0bb314800/src/lib/: backend.rs  bucket.rs  bucket_id.rs  insn.rs  interaction.rs  mod.rs  trace.rs
projects/pico-45e74ccd62758c6d67239913956e749adaba261c/: Cargo.toml  README.md
projects/pico-45e74ccd62758c6d67239913956e749adaba261c/pico-real-backend/: Cargo.toml
projects/pico-45e74ccd62758c6d67239913956e749adaba261c/pico-real-backend/src/: main.rs
projects/pico-45e74ccd62758c6d67239913956e749adaba261c/src/lib/: backend.rs  bucket.rs  bucket_id.rs  chip_row.rs  insn.rs  interaction.rs  mod.rs  trace.rs
projects/risc0-c0db0713671c8ec467b3efc26b22a0b0591897ff/: Cargo.toml
projects/risc0-c0db0713671c8ec467b3efc26b22a0b0591897ff/src/lib/: backend.rs  mod.rs  trace.rs
projects/sp1-39ab52fce38172c9d23feed7248198dc14c164a9/: Cargo.toml  README.md
projects/sp1-39ab52fce38172c9d23feed7248198dc14c164a9/src/lib/: backend.rs  interaction.rs  mod.rs  trace.rs
projects/sp1-7f643da16813af4c0fbaad4837cd7409386cf38c/: Cargo.toml  README.md
projects/sp1-7f643da16813af4c0fbaad4837cd7409386cf38c/src/lib/: backend.rs  bucket.rs  bucket_id.rs  chip_row.rs  mod.rs  trace.rs
projects/sp1-811a3f2c03914088c7c9e1774266934a3f9f5359/: Cargo.toml  README.md
projects/sp1-811a3f2c03914088c7c9e1774266934a3f9f5359/src/lib/: backend.rs  bucket.rs  bucket_id.rs  insn.rs  mod.rs  trace.rs
scripts/: extract_initial_seeds.py  filter_bugs_by_pattern.py  profile_benchmark_campaign.py  profile_semantic_search.py  run_all_experiments.sh  run_bandit_vs_linucb.sh  run_experiments_fast.sh  run_semantic_e2e.py  run_with_rl.sh
src/: lib.rs
src/fuzz/: seed.rs
src/rv32im/: instruction.rs  oracle.rs
src/trace/: micro_ops.rs
storage/fuzzing_seeds/: bandit-run1-iter200-bugs.jsonl  bandit-run1-iter200-corpus.jsonl  bandit-run1-iter200-metrics.jsonl  (+26 more)
(+15 files in other folders)
