[package]
name = "beak-fuzz"
version = "0.1.0"
edition = "2021"
description = "Fuzzing tool for zkVM artifacts"
publish = false

[workspace]

[lib]
name = "beak_core"
path = "src/lib.rs"

[[bin]]
name = "beak-fuzz"
path = "src/bin/fuzz.rs"

[[bin]]
name = "beak-trace"
path = "src/bin/trace.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
rrs-lib = "0.1"
crypto-bigint = "0.6"
libafl = "0.15"

# OpenVM path dependencies (scoped to one specific commit)
fuzzer_utils = { path = "../beak-py/out/openvm-d7eab708f43487b2e7c00524ffd611f835e8e6b5/openvm-src/crates/fuzzer_utils" }
openvm-sdk = { path = "../beak-py/out/openvm-d7eab708f43487b2e7c00524ffd611f835e8e6b5/openvm-src/crates/sdk" }
openvm-transpiler = { path = "../beak-py/out/openvm-d7eab708f43487b2e7c00524ffd611f835e8e6b5/openvm-src/crates/toolchain/transpiler" }
openvm-rv32im-transpiler = { path = "../beak-py/out/openvm-d7eab708f43487b2e7c00524ffd611f835e8e6b5/openvm-src/extensions/rv32im/transpiler" }
openvm-instructions = { path = "../beak-py/out/openvm-d7eab708f43487b2e7c00524ffd611f835e8e6b5/openvm-src/crates/toolchain/instructions" }
openvm-circuit = { path = "../beak-py/out/openvm-d7eab708f43487b2e7c00524ffd611f835e8e6b5/openvm-src/crates/vm" }
