[package]
name = "beak-core"
version = "0.1.0"
edition = "2021"
description = "Shared core for beak fuzzing tools"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rrs-lib = "0.1"
crypto-bigint = "0.6"
thiserror = "2"
libafl = { version = "0.15.4", features = ["std", "prelude"] }
libafl_bolts = "0.15.4"
