[package]
name = "beak-jolt-e9caa235"
version = "0.1.0"
edition = "2021"
description = "Jolt-specific beak binaries (commit e9caa235)"
publish = false

[lib]
path = "src/lib/mod.rs"

[[bin]]
name = "beak-fuzz"
path = "src/bin/fuzz.rs"

[[bin]]
name = "beak-fuzz-rl"
path = "src/bin/fuzz_rl.rs"

[[bin]]
name = "beak-trace"
path = "src/bin/trace.rs"

[dependencies]
beak-core = { path = "../../crates/beak-core" }
clap = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
common = { path = "../../beak-py/out/jolt-e9caa23565dbb13019afe61a2c95f51d1999e286/jolt-src/common" }
tracer = { path = "../../beak-py/out/jolt-e9caa23565dbb13019afe61a2c95f51d1999e286/jolt-src/tracer" }
jolt = { path = "../../beak-py/out/jolt-e9caa23565dbb13019afe61a2c95f51d1999e286/jolt-src", features = ["host"] }

[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "v0.5.0-optimize-mul-u64" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "v0.5.0-optimize-mul-u64" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "v0.5.0-optimize-mul-u64" }
