[package]
name = "beak-openvm-336f1a47"
version = "0.1.0"
edition = "2021"
description = "OpenVM-specific beak binaries (commit 336f1a47)"
publish = false

[lib]
path = "src/lib/mod.rs"

[[bin]]
name = "beak-trace"
path = "src/bin/trace.rs"

[[bin]]
name = "beak-fuzz"
path = "src/bin/fuzz.rs"

[dependencies]
beak-core = { path = "../../crates/beak-core" }
clap = "4.5"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
strum = { version = "0.27", features = ["derive"] }

# OpenVM path dependencies (scoped to one specific commit)
fuzzer_utils = { path = "../../beak-py/out/openvm-336f1a475e5aa3513c4c5a266399f4128c119bba/openvm-src/crates/fuzzer_utils" }
openvm-sdk = { path = "../../beak-py/out/openvm-336f1a475e5aa3513c4c5a266399f4128c119bba/openvm-src/crates/sdk" }
openvm-circuit = { path = "../../beak-py/out/openvm-336f1a475e5aa3513c4c5a266399f4128c119bba/openvm-src/crates/vm" }
openvm-transpiler = { path = "../../beak-py/out/openvm-336f1a475e5aa3513c4c5a266399f4128c119bba/openvm-src/crates/toolchain/transpiler" }
openvm-rv32im-transpiler = { path = "../../beak-py/out/openvm-336f1a475e5aa3513c4c5a266399f4128c119bba/openvm-src/extensions/rv32im/transpiler" }
openvm-instructions = { path = "../../beak-py/out/openvm-336f1a475e5aa3513c4c5a266399f4128c119bba/openvm-src/crates/toolchain/instructions" }
openvm-stark-backend = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.0.0-rc.0" }
