[package]
name = "beak-sp1-7f643da1"
version = "0.1.0"
edition = "2021"
description = "SP1-specific beak binaries (commit 7f643da1)"
publish = false

[lib]
path = "src/lib/mod.rs"

[[bin]]
name = "beak-fuzz"
path = "src/bin/fuzz.rs"

[[bin]]
name = "beak-trace"
path = "src/bin/trace.rs"

[dependencies]
beak-core = { path = "../../crates/beak-core" }
clap = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
sp1-core-executor = { path = "/tmp/sp1-7f/crates/core/executor" }
sp1-core-machine = { path = "/tmp/sp1-7f/crates/core/machine" }
sp1-prover = { path = "/tmp/sp1-7f/crates/prover" }
sp1-stark = { path = "/tmp/sp1-7f/crates/stark" }
