[package]
name = "beak-sp1-811a3f2c"
version = "0.1.0"
edition = "2021"
description = "SP1-specific beak binaries (commit 811a3f2c)"
publish = false

[lib]
path = "src/lib/mod.rs"

[[bin]]
name = "beak-fuzz"
path = "src/bin/fuzz.rs"

[[bin]]
name = "beak-trace"
path = "src/bin/trace.rs"

[[bin]]
name = "debug-official"
path = "src/bin/debug_official.rs"

[dependencies]
beak-core = { path = "../../crates/beak-core" }
clap = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sp1-core-machine = "3.4.0"
strum = { version = "0.26", features = ["derive"] }
sp1-core-executor = "3.4.0"
sp1-prover = "3.4.0"
sp1-stark = "3.4.0"
