[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pico-fuzzer"
version = "0.0.1"
description = "Installer entry for the Pico zkVM"
requires-python = ">= 3.10"
authors = []
readme = "README.md"
dependencies = [
  "zkvm-fuzzer-utils",
]

[project.scripts]
pico-fuzzer = "pico_fuzzer.cli:app"

[tool.setuptools.packages.find]
include = ["pico_fuzzer*"]
exclude = []
