[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "risc0-fuzzer"
version = "0.0.1"
description = "Installer entry for the RISC0 zkVM"
requires-python = ">= 3.10"
authors = []
readme = "README.md"
dependencies = [
  "zkvm-fuzzer-utils",
]

[project.scripts]
risc0-fuzzer = "risc0_fuzzer.cli:app"

[tool.setuptools.packages.find]
include = ["risc0_fuzzer*"]
exclude = []

[tool.setuptools.package-data]
risc0_fuzzer = ["assets/**/*"]
