[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sp1-fuzzer"
version = "0.0.1"
description = "Installer entry for the SP1 zkVM"
requires-python = ">= 3.10"
authors = []
readme = "README.md"
dependencies = [
  "zkvm-fuzzer-utils",
]

[project.scripts]
sp1-fuzzer = "sp1_fuzzer.cli:app"

[tool.setuptools.packages.find]
include = ["sp1_fuzzer*"]
exclude = []

[tool.setuptools.package-data]
sp1_fuzzer = ["fuzzer_utils_crate/**/*"]
